feat: Added WebSocket Security
